--- a/ui/package.json
+++ b/ui/package.json
@@ -16,11 +16,15 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.2.1",
     "@tanstack/react-query": "^5.83.0",
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-spinners": "^0.14.1"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
