feat: Add verification flow for gift claiming - Auto-navigate to verification screen from notification - Add Google-Wallet mapping verification - Add wallet linking utility - Fix hash routing URL parsing - Add debug pages for OAuth testing

--- a/ui/.env
+++ b/ui/.env
@@ -1,6 +1,5 @@
 # Google OAuth (Optional)
-VITE_GOOGLE_CLIENT_ID=
+VITE_GOOGLE_CLIENT_ID=905092731045-93oik5rphrinr60h7chcv52i2m8f0t6r.apps.googleusercontent.com
 
-# Backend URLs
-VITE_WS_URL=ws://localhost:3002
-VITE_BACKEND_URL=http://localhost:3001
+VITE_WS_URL=ws://localhost:5175
+VITE_BACKEND_URL=http://localhost:5175
